[gd_scene load_steps=16 format=3 uid="uid://c4c5je8l6qxc"]

[ext_resource type="Texture2D" uid="uid://dslertpef5hqe" path="res://assets/cutscene/Black background for cutscene.png" id="1_jtvcs"]
[ext_resource type="Script" path="res://scenes/cutscenes/endings/ending1-1.gd" id="1_lq743"]
[ext_resource type="Texture2D" uid="uid://4gxswrkroh60" path="res://assets/cutscene/Borders for the cutscene image.png" id="2_bid1q"]
[ext_resource type="Texture2D" uid="uid://bhxj0786vomln" path="res://assets/cutscene/1. Kylän keskusta auringonlasku.png" id="3_s1rhr"]
[ext_resource type="FontFile" uid="uid://bcaimoqptoi87" path="res://assets/fonts/public-pixel/PublicPixel.ttf" id="4_pgk15"]
[ext_resource type="Script" path="res://scenes/cutscenes/cutscene1/RichTextLabel.gd" id="5_bej05"]

[sub_resource type="Theme" id="Theme_p6h7q"]
default_font = ExtResource("4_pgk15")

[sub_resource type="Animation" id="Animation_dtsim"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_gwtdk"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_085nn"]
_data = {
"fade_in": SubResource("Animation_dtsim"),
"fade_out": SubResource("Animation_gwtdk")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4eu5j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sgvrv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nfad8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kivvo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gc0v2"]

[node name="ending1-1" type="Node2D"]
script = ExtResource("1_lq743")

[node name="BlackBackgroundForCutscene" type="Sprite2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(6, 6)
texture = ExtResource("1_jtvcs")

[node name="BordersForTheCutsceneImage" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(960, 540)
scale = Vector2(6, 6)
texture = ExtResource("2_bid1q")

[node name="1_KylänKeskustaAuringonlasku" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(960, 540)
scale = Vector2(6, 6)
texture = ExtResource("3_s1rhr")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 270.0
offset_top = 705.0
offset_right = 1636.0
offset_bottom = 997.0
theme = SubResource("Theme_p6h7q")
theme_override_constants/line_separation = 21
theme_override_font_sizes/normal_font_size = 28
text = "You reach the town square and decide to sit down for a while, reflecting on everything you’ve heard, seen and experienced today. It wouldn’t be too bad to stay here, would it?"
scroll_active = false
autowrap_mode = 2
tab_size = 2
script = ExtResource("5_bej05")
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="Control/RichTextLabel"]
wait_time = 0.001

[node name="FadeRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 678.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeRect"]
libraries = {
"": SubResource("AnimationLibrary_085nn")
}

[node name="Button" type="Button" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_4eu5j")
theme_override_styles/hover = SubResource("StyleBoxEmpty_sgvrv")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_nfad8")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_kivvo")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gc0v2")
metadata/_edit_use_anchors_ = true

[connection signal="timeout" from="Control/RichTextLabel/Timer" to="Control/RichTextLabel" method="_on_timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
